zeit.cms changes
================

0.9.19 (unreleased)
-------------------

0.9.18 (2008-06-16)
-------------------

- Rekursives veröffentlichen und zurückziehen.
- Lighbox-Überschrift überdeckt jetzt nicht mehr den Schließen-Knopf
- Homepage-Teaser werden jetzt auch per JS begrenzt.
- Das Verwenden verschiedener Formate in einer Bildergruppe ist jetzt erlaubt.
- Veröffentlichungs- und Zurückziehscript eingebunden.
- Spezieller Workflow für Assets (derzeit nur Bilder).
- Zeitgesteuertes veröffentlichen/zurückziehen.
- Unterressort auswählen funktioniert jetzt ohne vorherigem Speichern des
  Ressorts (bug #4268).
- Keyword-Typeahead rennt jetzt nicht mehr bei jedem Buchstaben zum Server;
  außerdem wird das Ergebnis vom Browser gecacht (bug 4270).
- "Unendlich"-Knopf bei Datumseingabe (leert das Feld).
- Bilder haben kein besonderes Löschdatum mehr, dafür ist der Workflow da.
- Formulare sind nicht mehr Denglisch (bug #3734).
- WYSIWYG-Editor: Popups zeigen jetzt den Cursor an (bug #4221).
- Tab "Syndizieren": Die Ziele sind jetzt nach der Id sortiert (bug #4269).
- XML-Daten werden jetzt mit Pretty-Print zum DAV gegeben (bug #4256).
- Dateiliste: Klick auf den Dateinamen selektiert die Zeile jetzt (bug #4255).
- Homepage-Teaser/-Text haben jetzt keine Längenbegrenzung mehr.
- Die Metadaten von Relateds und Bildern werden jetzt beim Checkin aktualisiert
  (bug #4226).
- Workgingcopy-Preview gibt Query-Argumente jetzt beim Rendern weiter, so dass
  man auch die Seiten durchblättern kann (bug #4286).


0.9.17 (2008-06-10)
-------------------

- Suche stirbt nicht mehr an Umlauten (bug #4195).
- WYSIWYG-Editor: Listen werden jetzt korrekt unterstützt (bug #4223).
- Datums/Zeit-Felder haben jetzt Knöpfe für "in einer Woche" und "in einem
  Monat".
- Neue Defaults für nicht-angezeigte Ordner (bug #4229).
- Defaults für Syndizierungsziele (bug #4229).
- Es gibt jetzt die Möglichkeit den Typ von Objekten im UI zu ändern.